k8s/notification/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-app
  ports:
    - port: 80
      name: http
      targetPort: web
  type: ClusterIP
